[package]
name = "myr"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls", "blocking"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
hound = "3"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
mockall = "0.13"
